--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
-.App {
+@import url("https://fonts.googleapis.com/css?family=Francois+One|PT+Serif:400,400i,700,700i");
+
+body {
+  margin: 0px;
+  color: #2c3e50;
+  background-color: #ecf0f1;
+  font-size: 1.1em;
+}
+
+.main {
+  width: 590px;
+  margin: auto;
+  margin-top: 10px;
   text-align: center;
+  border: 1px solid #77777769;
+  background-color: #fdfdfd;
+  box-shadow: 0 0 1em #80808066;
+  border-radius: 4px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main h1 {
+  font-family: "Francois One";
+  margin-top: 0;
+  font-size: 35px;
+  margin-bottom: 20px;
+  padding: 5px;
+  color: #2c3e50;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form {
+  display: grid !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+form input[type="text"] {
+  width: 400px;
+  font-size: 12px;
+  padding: 5px;
+  border-radius: 4px;
+  border-width: 1px;
+  margin-bottom: 1%;
+}
+
+form button {
+  width: 30%;
+  background-color: #f23f21;
   color: white;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+form textarea {
+  width: 100%;
+  height: 150px;
+  font-size: 150px;
+  margin-top: 2px;
+  resize: none;
+  border-radius: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post {
+  width: 400px;
+  font-size: 12px;
+  padding: 5px;
+  border-radius: 4px;
+  border-width: 1px;
+  margin-bottom: 1%;
+  background-color: #fdfdfd;
 }
+
+.blog-list-item {
+  width: 590px;
+  min-height: 250px;
+  margin: auto;
+  margin-top: 10px;
+  border: 1px solid #77777769;
+  background-color: #fdfdfd;
+  border-radius: 4px;
+  padding: 20px 60px;
+  box-shadow: 0 0 1em #80808066;
+}
+
+
+.blog-list-item-image {
+  float: left;
+  width: 100%;
+  max-width: 350px;
+  height: 100%;
+  margin-right: 20px;
+  margin-bottom: 5%;
+}
+
+.blog-list-item-title {
+  font-size: 35px;
+  font-family: "Francois One";
+  margin-bottom: 10px;
+}
+
+.blog-list-item-lede {
+  display: block;
+  margin-bottom: 50px;
+  
+}
+
+.blog-list-item-lede img {
+  width: 100%;
+}
+
+.blog-list-item-byline {
+  font-size: 0.8em;
+  margin-bottom: 15px;
+  color: #777777;
+}
+
+.blog-list-item-byline-author {
+  font-weight: bolder;
+}
+
+.blog {
+  padding: 0px 10% 0px 10%;
+}
+
+.nav {
+  background-color: #d26552;
+  margin: 0px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Francois One";
+}
+
+.search {
+  width: 200px;
+  height: 30px;
+  border-radius: 4px;
+  border-width: 0px;
+  font-family: "Francois One";
+}
+
+.searchButton {
+  width: 70px;
+  height: 30px;
+  border-radius: 4px;
+  background-color: #777777;
+  color: white;
+  font-family: "Francois One";
+  cursor: pointer;
+}
+
+.logo {
+  font-weight: bold;
+  font-size: 1.9em;
+  margin-left: 10px;
+  font-family: "Francois One";
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.nav-selected {
+  background-color: #ecf0f1;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+  margin-right: 5px;
+  font-size: 1.1em;
+  cursor: pointer;
+}
+
+.nav-unselected {
+  background-color: #ecf0f1;
+  padding: 5px;
+  margin-right: 5px;
+  color: grey;
+  font-size: 1.1em;
+  cursor: pointer;
+}
+
+
+body {
+
+  /* background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20210326/pngtree-blank-diary-and-a-pen-image_587733.jpg"); */
+  /* background-image: url("https://www.publicdomainpictures.net/pictures/80000/nahled/blur-background.jpg"); */
+  background-image: url("https://us.123rf.com/450wm/weedezign/weedezign1502/weedezign150200489/36793318-vintage-filtre-arri%C3%A8re-plan-flou-colorful-magasin-de-flou-avec-bokeh-.jpg");
+  background-size: cover ;
+  background-repeat: no-repeat;
+
+}
+
